# uv-snapshot-cli

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/env_snapshot/: base_pyproject.toml  cli.py  core.py
tests/: test_core.py
