[project]
name = "env-snapshot"
version = "0.1.0"
description = "A tool to snapshot current python environment dependencies into a UV-compatible TOML file."
authors = [{ name = "ComfyUI User", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uv>=0.1.0",
    "tomlkit>=0.12.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "packaging>=23.0",
]

[project.scripts]
New-EnvSnapshot = "env_snapshot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/env_snapshot"]
